# Session_13_14_15

./: CMakeLists.txt
docs/source/: conf.py  index.rst
include/: flexible_container.h  is_raw_pointer.h  my_type.h  pair.h  split.h  sum.h  transform.h
src/: CMakeLists.txt  my_type.cpp  split.cpp
tests/: CMakeLists.txt  test_flexible_container.cpp  test_is_raw_pointer.cpp  test_mytype.cpp  test_pair.cpp  test_split.cpp  test_sum.cpp  test_transform.cpp
